remove notebook outputs

--- a/text_embedding.ipynb
+++ b/text_embedding.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/torch/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -32,20 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "idx: 48344\n",
-      "idx: 91625\n",
-      "batch_img_tensor: torch.Size([2, 3, 512, 512])\n",
-      "batch_comment_encoding: torch.Size([2, 50])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config = Config()\n",
     "img_comments_folder = Path(\"/Users/chengbai/ml/dataset/flickr30k_images/\")\n",
@@ -55,24 +35,17 @@
     "BATCH_SIZE = 2\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "batch_img_tensor, batch_comment_encoding = next(iter(train_dataloader))\n",
+    "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding = next(iter(train_dataloader))\n",
     "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
+    "print(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
     "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "token_embedding: torch.Size([2, 50, 728])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_token_embedding = TextTokenEmbedding(config=config)\n",
     "token_embedding = text_token_embedding(batch_comment_encoding)\n",
@@ -81,20 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'A skateboarder in a red shirt .<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|>'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_token_embedding.text_encoder.decode(list(batch_comment_encoding[0]))"
    ]
