add notebook outputs

--- a/text_embedding.ipynb
+++ b/text_embedding.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -23,9 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enriched img id: /tmp/enriched_results.csv\n",
+      "idx: 77596\n",
+      "idx: 89954\n",
+      "batch_img_tensor: torch.Size([2, 3, 512, 512])\n",
+      "batch_img_id_tensor: torch.Size([2])\n",
+      "batch_comment_encoding: torch.Size([2, 50])\n"
+     ]
+    }
+   ],
    "source": [
     "config = Config()\n",
     "img_comments_folder = Path(\"/Users/chengbai/ml/dataset/flickr30k_images/\")\n",
@@ -43,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "token_embedding: torch.Size([2, 50, 728])\n"
+     ]
+    }
+   ],
    "source": [
     "text_token_embedding = TextTokenEmbedding(config=config)\n",
     "token_embedding = text_token_embedding(batch_comment_encoding)\n",
@@ -54,9 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'An old man is sitting in a chair outside a colorfully painted building .<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|>'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_token_embedding.text_encoder.decode(list(batch_comment_encoding[0]))"
    ]
