--- a/text_casual_mask_transformer.ipynb
+++ b/text_casual_mask_transformer.ipynb
@@ -15,19 +15,14 @@
     }
    ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "from config import Config\n",
+    "\n",
+    "from fliker_img_comment_dataset import ImgCommentDataset\n",
+    "from text_casual_mask_transformer import TextMaskedTransformer\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.functional as F\n",
-    "from torch.utils.data import DataLoader\n",
-    "\n",
-    "from config import Config\n",
-    "from fliker_img_comment_dataset import ImgCommentDataset\n",
-    "from text_token_embedding import TextTokenEmbedding\n",
-    "\n",
-    "from pathlib import Path\n"
+    "from torch.utils.data import DataLoader\n"
    ]
   },
   {
@@ -39,11 +34,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tokens: 128000\n",
+      "tokenizer.is_fast: True\n",
       "Enriched img id: /tmp/enriched_results.csv\n",
       "tokens: 128000\n",
       "tokenizer.is_fast: True\n",
-      "idx: 27484\n",
-      "idx: 87415\n",
+      "idx: 94246\n",
+      "idx: 5167\n",
       "batch_img_tensor: torch.Size([2, 3, 512, 512])\n",
       "batch_img_id_tensor: torch.Size([2])\n",
       "batch_comment_encoding: torch.Size([2, 50])\n"
@@ -52,6 +49,8 @@
    ],
    "source": [
     "config = Config()\n",
+    "text_transformer = TextMaskedTransformer(config=config)\n",
+    "\n",
     "train_dataset = ImgCommentDataset(config, split=\"train\")\n",
     "\n",
     "BATCH_SIZE = 2\n",
@@ -72,39 +71,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tokens: 128000\n",
-      "tokenizer.is_fast: True\n",
-      "batch_comment_encoding: torch.Size([2, 50])\n",
-      "token_embedding: torch.Size([2, 50, 728])\n"
+      "batch_comment_encoding: torch.Size([2, 50])\n"
      ]
-    }
-   ],
-   "source": [
-    "text_token_embedding = TextTokenEmbedding(config=config)\n",
-    "token_embedding = text_token_embedding(batch_comment_encoding)\n",
-    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
-    "print(f\"token_embedding: {token_embedding.size()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "'<bos>A man in a hat enjoys a beer .<pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad>'"
+       "tensor([[[-2.9965, -2.5986,  1.7316,  ...,  2.8583,  0.7617,  2.8572],\n",
+       "         [-3.2299, -3.5699,  1.7567,  ...,  0.6041, -2.0840,  2.2011],\n",
+       "         [-2.1205, -1.9326, -1.2019,  ..., -0.1423, -0.7124,  4.1225],\n",
+       "         ...,\n",
+       "         [-2.8331, -2.0594, -0.9743,  ..., -0.3416,  0.8765,  1.9124],\n",
+       "         [-2.8331, -2.0594, -0.9743,  ..., -0.3416,  0.8765,  1.9124],\n",
+       "         [-2.8331, -2.0594, -0.9743,  ..., -0.3416,  0.8765,  1.9124]],\n",
+       "\n",
+       "        [[-2.9047, -2.6965,  1.7756,  ...,  2.9380,  0.7957,  2.7985],\n",
+       "         [-3.5086, -1.7134, -2.2590,  ...,  0.2308,  1.3828,  3.0404],\n",
+       "         [-3.7643, -0.5407,  0.5804,  ...,  0.4328, -0.9526,  2.2167],\n",
+       "         ...,\n",
+       "         [-2.7891, -2.0642, -0.9030,  ..., -0.2778,  0.9047,  1.8718],\n",
+       "         [-2.7891, -2.0642, -0.9030,  ..., -0.2778,  0.9047,  1.8718],\n",
+       "         [-2.7891, -2.0642, -0.9030,  ..., -0.2778,  0.9047,  1.8718]]],\n",
+       "       grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_token_embedding.text_encoder.decode(list(batch_comment_encoding[0]))"
+    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "text_transformer(batch_comment_encoding)\n",
+    "      "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
