--- a/fliker_comment_tokenizer.ipynb
+++ b/fliker_comment_tokenizer.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/opt/anaconda3/envs/torch/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -33,21 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enriched img id: /tmp/enriched_results.csv\n"
+      "Enriched img id: /tmp/enriched_results.csv\n",
+      "tokens: 128000\n",
+      "tokenizer.is_fast: True\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 159/159 [00:00<00:00, 594.99it/s]\n"
+      "100%|██████████| 159/159 [00:00<00:00, 580.55it/s]\n"
      ]
     },
     {
@@ -72,7 +74,7 @@
        "}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +102,10 @@
     {
      "data": {
       "text/plain": [
-       "'<bos>cheng bai<image>'"
+       "'<bos><image><bos>cheng bai<pad><eos>'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,8 +114,249 @@
     "new_fliker_comment_toeknizer = FlikerCommentTokenizer.get_tokenizer(config=config)\n",
     "\n",
     "# test_data = \"hello, 會 員\"\n",
-    "test_data = \"cheng bai<image>\"\n",
+    "test_data = \"<image><bos>cheng bai<pad><eos>\"\n",
     "new_fliker_comment_toeknizer.decode(new_fliker_comment_toeknizer.encode(test_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<image>: [2, 4]\n",
+      "<bos>: [2, 2]\n",
+      "<eos>: [2, 1]\n",
+      "<pad>: [2, 0]\n",
+      "cheng bai: [2, 6473, 144, 183, 68]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(f\"<image>: {new_fliker_comment_toeknizer.encode('<image>')}\")\n",
+    "print(f\"<bos>: {new_fliker_comment_toeknizer.encode('<bos>')}\")\n",
+    "print(f\"<eos>: {new_fliker_comment_toeknizer.encode('<eos>')}\")\n",
+    "print(f\"<pad>: {new_fliker_comment_toeknizer.encode('<pad>')}\")\n",
+    "print(f\"cheng bai: {new_fliker_comment_toeknizer.encode('cheng bai')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<pad>'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_fliker_comment_toeknizer.decode(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SPECIAL_TOKENS_ATTRIBUTES',\n",
+       " '__annotations__',\n",
+       " '__call__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_add_bos_token',\n",
+       " '_add_eos_token',\n",
+       " '_add_tokens',\n",
+       " '_additional_special_tokens',\n",
+       " '_auto_class',\n",
+       " '_batch_encode_plus',\n",
+       " '_bos_token',\n",
+       " '_call_one',\n",
+       " '_cls_token',\n",
+       " '_compile_jinja_template',\n",
+       " '_convert_encoding',\n",
+       " '_convert_id_to_token',\n",
+       " '_convert_token_to_id_with_added_voc',\n",
+       " '_create_repo',\n",
+       " '_decode',\n",
+       " '_decode_use_source_tokenizer',\n",
+       " '_encode_plus',\n",
+       " '_eos_token',\n",
+       " '_eventual_warn_about_too_long_sequence',\n",
+       " '_eventually_correct_t5_max_length',\n",
+       " '_from_pretrained',\n",
+       " '_get_files_timestamps',\n",
+       " '_get_padding_truncation_strategies',\n",
+       " '_in_target_context_manager',\n",
+       " '_mask_token',\n",
+       " '_pad',\n",
+       " '_pad_token',\n",
+       " '_pad_token_type_id',\n",
+       " '_processor_class',\n",
+       " '_save_pretrained',\n",
+       " '_sep_token',\n",
+       " '_set_processor_class',\n",
+       " '_switch_to_input_mode',\n",
+       " '_switch_to_target_mode',\n",
+       " '_tokenizer',\n",
+       " '_unk_token',\n",
+       " '_upload_modified_files',\n",
+       " 'add_bos_token',\n",
+       " 'add_eos_token',\n",
+       " 'add_special_tokens',\n",
+       " 'add_tokens',\n",
+       " 'added_tokens_decoder',\n",
+       " 'added_tokens_encoder',\n",
+       " 'additional_special_tokens',\n",
+       " 'additional_special_tokens_ids',\n",
+       " 'all_special_ids',\n",
+       " 'all_special_tokens',\n",
+       " 'all_special_tokens_extended',\n",
+       " 'apply_chat_template',\n",
+       " 'as_target_tokenizer',\n",
+       " 'backend_tokenizer',\n",
+       " 'batch_decode',\n",
+       " 'batch_encode_plus',\n",
+       " 'bos_token',\n",
+       " 'bos_token_id',\n",
+       " 'build_inputs_with_special_tokens',\n",
+       " 'can_save_slow_tokenizer',\n",
+       " 'chat_template',\n",
+       " 'clean_up_tokenization',\n",
+       " 'clean_up_tokenization_spaces',\n",
+       " 'cls_token',\n",
+       " 'cls_token_id',\n",
+       " 'convert_added_tokens',\n",
+       " 'convert_ids_to_tokens',\n",
+       " 'convert_tokens_to_ids',\n",
+       " 'convert_tokens_to_string',\n",
+       " 'create_token_type_ids_from_sequences',\n",
+       " 'decode',\n",
+       " 'decoder',\n",
+       " 'default_chat_template',\n",
+       " 'deprecation_warnings',\n",
+       " 'encode',\n",
+       " 'encode_plus',\n",
+       " 'eos_token',\n",
+       " 'eos_token_id',\n",
+       " 'from_pretrained',\n",
+       " 'get_added_vocab',\n",
+       " 'get_special_tokens_mask',\n",
+       " 'get_vocab',\n",
+       " 'init_inputs',\n",
+       " 'init_kwargs',\n",
+       " 'is_fast',\n",
+       " 'mask_token',\n",
+       " 'mask_token_id',\n",
+       " 'max_len_sentences_pair',\n",
+       " 'max_len_single_sentence',\n",
+       " 'model_input_names',\n",
+       " 'model_max_length',\n",
+       " 'name_or_path',\n",
+       " 'num_special_tokens_to_add',\n",
+       " 'pad',\n",
+       " 'pad_token',\n",
+       " 'pad_token_id',\n",
+       " 'pad_token_type_id',\n",
+       " 'padding_side',\n",
+       " 'prepare_for_model',\n",
+       " 'prepare_seq2seq_batch',\n",
+       " 'pretrained_vocab_files_map',\n",
+       " 'push_to_hub',\n",
+       " 'register_for_auto_class',\n",
+       " 'sanitize_special_tokens',\n",
+       " 'save_pretrained',\n",
+       " 'save_vocabulary',\n",
+       " 'sep_token',\n",
+       " 'sep_token_id',\n",
+       " 'set_truncation_and_padding',\n",
+       " 'slow_tokenizer_class',\n",
+       " 'special_tokens_map',\n",
+       " 'special_tokens_map_extended',\n",
+       " 'split_special_tokens',\n",
+       " 'tokenize',\n",
+       " 'train_new_from_iterator',\n",
+       " 'truncate_sequences',\n",
+       " 'truncation_side',\n",
+       " 'unk_token',\n",
+       " 'unk_token_id',\n",
+       " 'update_post_processor',\n",
+       " 'verbose',\n",
+       " 'vocab',\n",
+       " 'vocab_file',\n",
+       " 'vocab_files_names',\n",
+       " 'vocab_size']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(new_fliker_comment_toeknizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pad>\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_fliker_comment_toeknizer.vocab_size, len(new_fliker_comment_toeknizer.get_vocab()), \n",
+    "new_fliker_comment_toeknizer.get_added_vocab()\n",
+    "\n",
+    "for k, v in new_fliker_comment_toeknizer.vocab.items():\n",
+    "    if v ==0:\n",
+    "        print(k)\n",
+    "        break\n"
    ]
   },
   {
