End 2 end caption model

--- a/Image_embedding.ipynb
+++ b/Image_embedding.ipynb
@@ -69,10 +69,11 @@
     "BATCH_SIZE = 2\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding = next(iter(train_dataloader))\n",
+    "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding, batch_comment_mask = next(iter(train_dataloader))\n",
     "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
     "print(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
     "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "print(f\"batch_comment_mask: {batch_comment_mask.size()}\")\n",
     "show_img_tensor_CHW(img_tensor=batch_img_tensor[0])"
    ]
   },
