--- a/text_casual_mask_transformer.ipynb
+++ b/text_casual_mask_transformer.ipynb
@@ -56,10 +56,11 @@
     "BATCH_SIZE = 2\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding = next(iter(train_dataloader))\n",
+    "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding, batch_comment_mask= next(iter(train_dataloader))\n",
     "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
     "print(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
-    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")"
+    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "print(f\"batch_comment_mask: {batch_comment_mask.size()}\")"
    ]
   },
   {
