--- a/fliker_comment_tokenizer.ipynb
+++ b/fliker_comment_tokenizer.ipynb
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 159/159 [00:00<00:00, 580.55it/s]\n"
+      "100%|██████████| 159/159 [00:00<00:00, 573.56it/s]\n"
      ]
     },
     {
@@ -115,7 +115,10 @@
     "\n",
     "# test_data = \"hello, 會 員\"\n",
     "test_data = \"<image><bos>cheng bai<pad><eos>\"\n",
-    "new_fliker_comment_toeknizer.decode(new_fliker_comment_toeknizer.encode(test_data))"
+    "test_data_encoded = new_fliker_comment_toeknizer.encode(test_data)\n",
+    "print(f\"encoded: {test_data_encoded}\")\n",
+    "test_data_decoded = new_fliker_comment_toeknizer.decode(test_data_encoded)\n",
+    "print(f\"decode: {test_data_decoded}\")"
    ]
   },
   {
