Revise the self-attention module

--- a/text_embedding.ipynb
+++ b/text_embedding.ipynb
@@ -40,13 +40,12 @@
      "output_type": "stream",
      "text": [
       "Enriched img id: /tmp/enriched_results.csv\n",
-      "tokens: 128000\n",
+      "tokens: 10000\n",
       "tokenizer.is_fast: True\n",
-      "idx: 27484\n",
-      "idx: 87415\n",
-      "batch_img_tensor: torch.Size([2, 3, 512, 512])\n",
+      "batch_img_tensor: torch.Size([2, 3, 224, 224])\n",
       "batch_img_id_tensor: torch.Size([2])\n",
-      "batch_comment_encoding: torch.Size([2, 50])\n"
+      "batch_comment_encoding: torch.Size([2, 50])\n",
+      "batch_comment_mask: torch.Size([2, 50])\n"
      ]
     }
    ],
@@ -57,22 +56,25 @@
     "BATCH_SIZE = 2\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding = next(iter(train_dataloader))\n",
+    "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding, batch_comment_mask = (\n",
+    "    next(iter(train_dataloader))\n",
+    ")\n",
     "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
     "print(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
-    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")"
+    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "print(f\"batch_comment_mask: {batch_comment_mask.size()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tokens: 128000\n",
+      "tokens: 10000\n",
       "tokenizer.is_fast: True\n",
       "batch_comment_encoding: torch.Size([2, 50])\n",
       "token_embedding: torch.Size([2, 50, 728])\n"
@@ -94,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "'<bos>A man in a hat enjoys a beer .<pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad>'"
+       "'<bos>girl posing on tree<pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad>'"
       ]
      },
      "execution_count": 4,
