1. add coco image-caption dataset. 2. Refactor code

--- a/img_transformer.ipynb
+++ b/img_transformer.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "from config import Config\n",
     "from img_transformer import ImgTransformer\n",
-    "from fliker_img_comment_dataset import ImgCommentDataset\n",
+    "from img_comment_dataset import ImgCommentDataset\n",
     "from img_embedding import ImageEmbedding\n",
     "from img_util import show_img_tensor_CHW\n",
     "\n",
