--- a/text_casual_mask_transformer.ipynb
+++ b/text_casual_mask_transformer.ipynb
@@ -17,12 +17,12 @@
    "source": [
     "from config import Config\n",
     "\n",
-    "from fliker_img_comment_dataset import ImgCommentDataset\n",
+    "from img_comment_dataset import ImgCommentDataset\n",
     "from text_casual_mask_transformer import TextMaskedTransformer\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.utils.data import DataLoader\n"
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
@@ -39,11 +39,10 @@
       "Enriched img id: /tmp/enriched_results.csv\n",
       "tokens: 128000\n",
       "tokenizer.is_fast: True\n",
-      "idx: 94246\n",
-      "idx: 5167\n",
-      "batch_img_tensor: torch.Size([2, 3, 512, 512])\n",
+      "batch_img_tensor: torch.Size([2, 3, 224, 224])\n",
       "batch_img_id_tensor: torch.Size([2])\n",
-      "batch_comment_encoding: torch.Size([2, 50])\n"
+      "batch_comment_encoding: torch.Size([2, 50])\n",
+      "batch_comment_mask: torch.Size([2, 50])\n"
      ]
     }
    ],
@@ -56,7 +55,9 @@
     "BATCH_SIZE = 2\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding, batch_comment_mask= next(iter(train_dataloader))\n",
+    "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding, batch_comment_mask = (\n",
+    "    next(iter(train_dataloader))\n",
+    ")\n",
     "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
     "print(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
     "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
@@ -78,21 +79,21 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[-2.9965, -2.5986,  1.7316,  ...,  2.8583,  0.7617,  2.8572],\n",
-       "         [-3.2299, -3.5699,  1.7567,  ...,  0.6041, -2.0840,  2.2011],\n",
-       "         [-2.1205, -1.9326, -1.2019,  ..., -0.1423, -0.7124,  4.1225],\n",
+       "tensor([[[-3.2867, -1.9692, -1.0498,  ...,  2.8695,  1.2857,  1.0185],\n",
+       "         [-2.7225, -2.6339, -0.1985,  ...,  1.2647,  0.4622,  1.8369],\n",
+       "         [-4.5211, -1.9832, -2.3136,  ...,  0.0302, -1.1067,  2.4236],\n",
        "         ...,\n",
-       "         [-2.8331, -2.0594, -0.9743,  ..., -0.3416,  0.8765,  1.9124],\n",
-       "         [-2.8331, -2.0594, -0.9743,  ..., -0.3416,  0.8765,  1.9124],\n",
-       "         [-2.8331, -2.0594, -0.9743,  ..., -0.3416,  0.8765,  1.9124]],\n",
+       "         [-2.8426, -2.0694, -1.0883,  ...,  1.5922,  0.5160, -0.2233],\n",
+       "         [-2.8426, -2.0694, -1.0883,  ...,  1.5922,  0.5160, -0.2233],\n",
+       "         [-2.8426, -2.0694, -1.0883,  ...,  1.5922,  0.5160, -0.2233]],\n",
        "\n",
-       "        [[-2.9047, -2.6965,  1.7756,  ...,  2.9380,  0.7957,  2.7985],\n",
-       "         [-3.5086, -1.7134, -2.2590,  ...,  0.2308,  1.3828,  3.0404],\n",
-       "         [-3.7643, -0.5407,  0.5804,  ...,  0.4328, -0.9526,  2.2167],\n",
+       "        [[-2.9785, -1.7994, -1.2250,  ...,  2.8120,  1.1808,  0.9672],\n",
+       "         [-4.3118, -0.7161, -0.9307,  ...,  1.7823,  1.1035,  1.8466],\n",
+       "         [-4.4620, -2.1306, -3.2846,  ...,  2.0892,  0.4304,  0.8443],\n",
        "         ...,\n",
-       "         [-2.7891, -2.0642, -0.9030,  ..., -0.2778,  0.9047,  1.8718],\n",
-       "         [-2.7891, -2.0642, -0.9030,  ..., -0.2778,  0.9047,  1.8718],\n",
-       "         [-2.7891, -2.0642, -0.9030,  ..., -0.2778,  0.9047,  1.8718]]],\n",
+       "         [-2.5613, -1.8117, -1.3165,  ...,  1.5518,  0.3764, -0.2631],\n",
+       "         [-2.5613, -1.8117, -1.3165,  ...,  1.5518,  0.3764, -0.2631],\n",
+       "         [-2.5613, -1.8117, -1.3165,  ...,  1.5518,  0.3764, -0.2631]]],\n",
        "       grad_fn=<AddBackward0>)"
       ]
      },
@@ -103,8 +104,7 @@
    ],
    "source": [
     "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
-    "text_transformer(batch_comment_encoding)\n",
-    "      "
+    "text_transformer(batch_comment_encoding)"
    ]
   },
   {
