--- a/text_embedding.ipynb
+++ b/text_embedding.ipynb
@@ -24,7 +24,7 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "from config import Config\n",
-    "from fliker_img_comment_dataset import ImgCommentDataset\n",
+    "from img_comment_dataset import ImgCommentDataset\n",
     "from text_token_embedding import TextTokenEmbedding\n",
     "\n",
     "from pathlib import Path\n"
