--- a/fliker_comment_tokenizer.ipynb
+++ b/fliker_comment_tokenizer.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/torch/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -40,16 +40,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enriched img id: /tmp/enriched_results.csv\n",
-      "tokens: 128000\n",
-      "tokenizer.is_fast: True\n"
+      "Enriched img id: /tmp/enriched_results.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 159/159 [00:00<00:00, 573.56it/s]\n"
+      "100%|██████████| 159/159 [00:00<00:00, 565.35it/s]\n"
      ]
     },
     {
@@ -65,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "GemmaTokenizerFast(name_or_path='google/paligemma-3b-mix-224', vocab_size=128000, model_max_length=1000000000000000019884624838656, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<bos>', 'eos_token': '<eos>', 'unk_token': '<unk>', 'pad_token': '<pad>', 'additional_special_tokens': ['<image>']}, clean_up_tokenization_spaces=False),  added_tokens_decoder={\n",
+       "GemmaTokenizerFast(name_or_path='google/paligemma-3b-mix-224', vocab_size=10000, model_max_length=1000000000000000019884624838656, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<bos>', 'eos_token': '<eos>', 'unk_token': '<unk>', 'pad_token': '<pad>', 'additional_special_tokens': ['<image>']}, clean_up_tokenization_spaces=False),  added_tokens_decoder={\n",
        "\t0: AddedToken(\"<pad>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
        "\t1: AddedToken(\"<eos>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
        "\t2: AddedToken(\"<bos>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
@@ -88,26 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tokens: 128000\n",
-      "tokenizer.is_fast: True\n"
+      "tokens: 10000\n",
+      "tokenizer.is_fast: True\n",
+      "encoded: [2, 4, 2, 6473, 144, 183, 68, 0, 1]\n",
+      "decode: <bos><image><bos>cheng bai<pad><eos>\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'<bos><image><bos>cheng bai<pad><eos>'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -123,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +129,6 @@
     }
    ],
    "source": [
-    "\n",
     "print(f\"<image>: {new_fliker_comment_toeknizer.encode('<image>')}\")\n",
     "print(f\"<bos>: {new_fliker_comment_toeknizer.encode('<bos>')}\")\n",
     "print(f\"<eos>: {new_fliker_comment_toeknizer.encode('<eos>')}\")\n",
@@ -149,217 +138,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<pad>'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_fliker_comment_toeknizer.decode(0)\n"
+    "new_fliker_comment_toeknizer.decode(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['SPECIAL_TOKENS_ATTRIBUTES',\n",
-       " '__annotations__',\n",
-       " '__call__',\n",
-       " '__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_add_bos_token',\n",
-       " '_add_eos_token',\n",
-       " '_add_tokens',\n",
-       " '_additional_special_tokens',\n",
-       " '_auto_class',\n",
-       " '_batch_encode_plus',\n",
-       " '_bos_token',\n",
-       " '_call_one',\n",
-       " '_cls_token',\n",
-       " '_compile_jinja_template',\n",
-       " '_convert_encoding',\n",
-       " '_convert_id_to_token',\n",
-       " '_convert_token_to_id_with_added_voc',\n",
-       " '_create_repo',\n",
-       " '_decode',\n",
-       " '_decode_use_source_tokenizer',\n",
-       " '_encode_plus',\n",
-       " '_eos_token',\n",
-       " '_eventual_warn_about_too_long_sequence',\n",
-       " '_eventually_correct_t5_max_length',\n",
-       " '_from_pretrained',\n",
-       " '_get_files_timestamps',\n",
-       " '_get_padding_truncation_strategies',\n",
-       " '_in_target_context_manager',\n",
-       " '_mask_token',\n",
-       " '_pad',\n",
-       " '_pad_token',\n",
-       " '_pad_token_type_id',\n",
-       " '_processor_class',\n",
-       " '_save_pretrained',\n",
-       " '_sep_token',\n",
-       " '_set_processor_class',\n",
-       " '_switch_to_input_mode',\n",
-       " '_switch_to_target_mode',\n",
-       " '_tokenizer',\n",
-       " '_unk_token',\n",
-       " '_upload_modified_files',\n",
-       " 'add_bos_token',\n",
-       " 'add_eos_token',\n",
-       " 'add_special_tokens',\n",
-       " 'add_tokens',\n",
-       " 'added_tokens_decoder',\n",
-       " 'added_tokens_encoder',\n",
-       " 'additional_special_tokens',\n",
-       " 'additional_special_tokens_ids',\n",
-       " 'all_special_ids',\n",
-       " 'all_special_tokens',\n",
-       " 'all_special_tokens_extended',\n",
-       " 'apply_chat_template',\n",
-       " 'as_target_tokenizer',\n",
-       " 'backend_tokenizer',\n",
-       " 'batch_decode',\n",
-       " 'batch_encode_plus',\n",
-       " 'bos_token',\n",
-       " 'bos_token_id',\n",
-       " 'build_inputs_with_special_tokens',\n",
-       " 'can_save_slow_tokenizer',\n",
-       " 'chat_template',\n",
-       " 'clean_up_tokenization',\n",
-       " 'clean_up_tokenization_spaces',\n",
-       " 'cls_token',\n",
-       " 'cls_token_id',\n",
-       " 'convert_added_tokens',\n",
-       " 'convert_ids_to_tokens',\n",
-       " 'convert_tokens_to_ids',\n",
-       " 'convert_tokens_to_string',\n",
-       " 'create_token_type_ids_from_sequences',\n",
-       " 'decode',\n",
-       " 'decoder',\n",
-       " 'default_chat_template',\n",
-       " 'deprecation_warnings',\n",
-       " 'encode',\n",
-       " 'encode_plus',\n",
-       " 'eos_token',\n",
-       " 'eos_token_id',\n",
-       " 'from_pretrained',\n",
-       " 'get_added_vocab',\n",
-       " 'get_special_tokens_mask',\n",
-       " 'get_vocab',\n",
-       " 'init_inputs',\n",
-       " 'init_kwargs',\n",
-       " 'is_fast',\n",
-       " 'mask_token',\n",
-       " 'mask_token_id',\n",
-       " 'max_len_sentences_pair',\n",
-       " 'max_len_single_sentence',\n",
-       " 'model_input_names',\n",
-       " 'model_max_length',\n",
-       " 'name_or_path',\n",
-       " 'num_special_tokens_to_add',\n",
-       " 'pad',\n",
-       " 'pad_token',\n",
-       " 'pad_token_id',\n",
-       " 'pad_token_type_id',\n",
-       " 'padding_side',\n",
-       " 'prepare_for_model',\n",
-       " 'prepare_seq2seq_batch',\n",
-       " 'pretrained_vocab_files_map',\n",
-       " 'push_to_hub',\n",
-       " 'register_for_auto_class',\n",
-       " 'sanitize_special_tokens',\n",
-       " 'save_pretrained',\n",
-       " 'save_vocabulary',\n",
-       " 'sep_token',\n",
-       " 'sep_token_id',\n",
-       " 'set_truncation_and_padding',\n",
-       " 'slow_tokenizer_class',\n",
-       " 'special_tokens_map',\n",
-       " 'special_tokens_map_extended',\n",
-       " 'split_special_tokens',\n",
-       " 'tokenize',\n",
-       " 'train_new_from_iterator',\n",
-       " 'truncate_sequences',\n",
-       " 'truncation_side',\n",
-       " 'unk_token',\n",
-       " 'unk_token_id',\n",
-       " 'update_post_processor',\n",
-       " 'verbose',\n",
-       " 'vocab',\n",
-       " 'vocab_file',\n",
-       " 'vocab_files_names',\n",
-       " 'vocab_size']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dir(new_fliker_comment_toeknizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pad>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_fliker_comment_toeknizer.vocab_size, len(new_fliker_comment_toeknizer.get_vocab()), \n",
+    "new_fliker_comment_toeknizer.vocab_size, len(new_fliker_comment_toeknizer.get_vocab()),\n",
     "new_fliker_comment_toeknizer.get_added_vocab()\n",
     "\n",
     "for k, v in new_fliker_comment_toeknizer.vocab.items():\n",
-    "    if v ==0:\n",
+    "    if v == 0:\n",
     "        print(k)\n",
-    "        break\n"
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.3466)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = torch.eye(2, dtype=torch.float32)  # 64 classes, batch size = 10\n",
+    "output = torch.eye(2, dtype=torch.float32) * 10000  # 64 classes, batch size = 10\n",
+    "# output = torch.arange(4, dtype=torch.float32).view(2, -1)  # A prediction (logit)\n",
+    "pos_weight = torch.ones([2])  # All weights are equal to 1\n",
+    "# criterion = torch.nn.BCEWithLogitsLoss(pos_weight=pos_weight)\n",
+    "criterion = torch.nn.BCEWithLogitsLoss()\n",
+    "criterion(output, target)  # -log(sigmoid(1.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 1.])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[10000.,     0.],\n",
+       "        [    0., 10000.]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0.],\n",
+       "        [0., 1.]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.5000],\n",
+       "        [0.5000, 1.0000]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sig_output = nn.Sigmoid()(output)\n",
+    "sig_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-0.5032)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    1 * sig_output[0][0].log()\n",
+    "    + (1 - sig_output[0][1]).log()\n",
+    "    + (1 - sig_output[1][0]).log()\n",
+    "    + sig_output[1][1].log()\n",
+    ") / 4"
    ]
   },
   {
