1. Fix caption loss issue. Add capation prediction into the tensorboard

--- a/fliker_comment_tokenizer.ipynb
+++ b/fliker_comment_tokenizer.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/opt/anaconda3/envs/torch/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -40,14 +40,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enriched img id: /tmp/enriched_results.csv\n"
+      "Loaded 158915 fliker image-caption data items.\n",
+      "Loaded 591753 coco image-caption data items.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 159/159 [00:00<00:00, 565.35it/s]\n"
+      "100%|██████████| 751/751 [00:01<00:00, 587.73it/s]\n"
      ]
     },
     {
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
      "text": [
       "tokens: 10000\n",
       "tokenizer.is_fast: True\n",
-      "encoded: [2, 4, 2, 6473, 144, 183, 68, 0, 1]\n",
+      "encoded: [2, 4, 2, 135, 148, 176, 149, 77, 0, 1]\n",
       "decode: <bos><image><bos>cheng bai<pad><eos>\n"
      ]
     }
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +125,7 @@
       "<bos>: [2, 2]\n",
       "<eos>: [2, 1]\n",
       "<pad>: [2, 0]\n",
-      "cheng bai: [2, 6473, 144, 183, 68]\n"
+      "cheng bai: [2, 135, 148, 176, 149, 77]\n"
      ]
     }
    ],
@@ -138,27 +139,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<pad>'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_fliker_comment_toeknizer.decode(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(new_fliker_comment_toeknizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pad>\n"
+     ]
+    }
+   ],
    "source": [
     "new_fliker_comment_toeknizer.vocab_size, len(new_fliker_comment_toeknizer.get_vocab()),\n",
     "new_fliker_comment_toeknizer.get_added_vocab()\n",
@@ -167,141 +178,6 @@
     "    if v == 0:\n",
     "        print(k)\n",
     "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.3466)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "target = torch.eye(2, dtype=torch.float32)  # 64 classes, batch size = 10\n",
-    "output = torch.eye(2, dtype=torch.float32) * 10000  # 64 classes, batch size = 10\n",
-    "# output = torch.arange(4, dtype=torch.float32).view(2, -1)  # A prediction (logit)\n",
-    "pos_weight = torch.ones([2])  # All weights are equal to 1\n",
-    "# criterion = torch.nn.BCEWithLogitsLoss(pos_weight=pos_weight)\n",
-    "criterion = torch.nn.BCEWithLogitsLoss()\n",
-    "criterion(output, target)  # -log(sigmoid(1.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1., 1.])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pos_weight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[10000.,     0.],\n",
-       "        [    0., 10000.]])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[1., 0.],\n",
-       "        [0., 1.]])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[1.0000, 0.5000],\n",
-       "        [0.5000, 1.0000]])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sig_output = nn.Sigmoid()(output)\n",
-    "sig_output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-0.5032)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(\n",
-    "    1 * sig_output[0][0].log()\n",
-    "    + (1 - sig_output[0][1]).log()\n",
-    "    + (1 - sig_output[1][0]).log()\n",
-    "    + sig_output[1][1].log()\n",
-    ") / 4"
    ]
   },
   {
